--- a/style.css
+++ b/style.css
@@ -192,3 +192,22 @@ div.gallery img {
     font-family: sans-serif;
     color: white;
 }
+i {
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    font-size: 45px;
+    background: rgb(246,157,1);
+    color: white;
+    padding: 7px 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity .3s ease-in-out;
+}
+i:hover {
+    background: yellow;
+    color: black;
+    transition: 0.5s;
+}
